--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "eslint": "^4.16.0",
-    "react-bootstrap": "^0.32.0"
+    "react-bootstrap": "^0.32.0",
+    "react-idle": "^3.0.0"
   }
 }
