--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^3.3.7",
     "eslint": "^4.16.0",
     "react-bootstrap": "^0.32.0",
-    "react-idle": "^3.0.0"
+    "react-idle": "^3.0.0",
+    "react-validation": "^3.0.7",
+    "validator": "^9.4.1"
   }
 }
